[package]
name = "hypersheets"
version = "0.1.0"
authors = ["hchockarprasad <hchockarprasad@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.68"
js-sys = "0.3.19"

[dependencies.web-sys]
version = "0.3.45"
features = [
  'console',
  'Window',
  'Document',
  'HtmlElement',
  'HtmlInputElement',
  'Element',
  'Node',
  'CssStyleDeclaration',
  'Selection',
]

