[package]
name = "hypersheets"
version = "0.1.0"
authors = ["hchockarprasad <hchockarprasad@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = {version = "0.2.68", features = ["serde-serialize"]}
js-sys = "0.3.19"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3.45"
features = [
  'console',
  'Window',
  'Document',
  'HtmlElement',
  'HtmlInputElement',
  'Element',
  'Node',
  'CssStyleDeclaration',
  'Selection',
  'MouseEvent',
  'DomTokenList',
  'HtmlCanvasElement',
  'DomRect',
  'CustomEvent',
  'CustomEventInit'
]

